<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">


        <TextView
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/Login_title_1"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mt_title"
            android:text="@string/Main_title"
            android:textSize="@dimen/txtsize_Main_title1"/>

        <TextView
            android:id="@+id/textView"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mt_main_title2"
            android:text="@string/Main_title2" />


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/ml_edit_text1"
            android:layout_marginLeft="@dimen/ml_edit_text1"
            android:layout_marginTop="@dimen/mt_edit_text1"
            android:drawableStart="@drawable/drawable_left_phone"
            android:drawableLeft="@drawable/drawable_left_phone"
            android:hint="@string/et1_hint"
            android:inputType="phone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/et_pass_width"
                android:layout_height="@dimen/et_pass_height"
                android:layout_marginStart="@dimen/ml_edit_text2"
                android:layout_marginLeft="@dimen/ml_edit_text2"
                android:layout_marginTop="@dimen/mt_edit_text2"
                android:drawableStart="@drawable/drawable_left_password"
                android:drawableLeft="@drawable/drawable_left_password"
                android:hint="@string/et2_hint"
                android:inputType="textPassword"/>

            <ImageButton
                android:id="@+id/Visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mt_img_button"
                android:src="@drawable/hide"
                android:background="@android:color/transparent"/>


        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/SignIn_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ml_btn_login"
            android:layout_marginTop="@dimen/mt_btn_login"
            android:background="@drawable/button_rounded_login"
            android:text="@string/btn_login"
            android:textColor="@color/colorWhite" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ml_rem_pass"
                android:layout_marginTop="@dimen/mt_rem_pass"
                android:linksClickable="true"
                android:text="@string/remember_pass" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ml_checkbox"
                android:layout_marginTop="@dimen/mt_checkbox" />
        </RelativeLayout>

        <TextView
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ml_main_signup"
            android:layout_marginTop="@dimen/mt_main_signup"
            android:linksClickable="true"
            android:text="@string/signup_main"
            android:textColor="@color/colorGreen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@drawable/bacground"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>